--- a/WebApplication1/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/Index.cshtml
@@ -1,8 +1,4 @@
-﻿@{
-    ViewBag.Title = "Code editor by Apirix";
-}
-
-<div id="consoleError"></div>
+﻿<div id="consoleError"></div>
 
 <head>
     <!-- Viewsport, desctription, ignore default mobile stylings, author -->
@@ -17,11 +13,15 @@
     <link href="~/Content/FileManagerDesign.css" rel="stylesheet" />
     <link href="~/Content/styleIndex.css" rel="stylesheet" />
     <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+    <!-- Here we have 2 bootstrap document, a lot of css code. Basicly a library -->
     <link rel="stylesheet" href="../../Content/bootstrap.css" />
+    <!-- Second bootstrap document -->
     <link rel="stylesheet" href="../../Content/bootstrap.min.css" />
     <link href="~/mycss/StyleSheet1.css" rel="stylesheet" />
     <link rel="stylesheet" href="../../Content/Site.css" />
+    <!-- CSS document for settings and other different features, not all are used -->
     <link rel="stylesheet" href="../../Content/style67.css" />
+    <!-- CSS document for the layout of the site, the main structure to things -->
     <link rel="stylesheet" href="../../Content/bootstrapnonscroll.css" />
 </head>
 <div class="col-md-12" id="Container">
@@ -111,18 +111,21 @@
 
 <!-- JavaScript files begins -->
 <script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
+<!-- Ace editor JavaScript document -->
 <script src="~/ace/ace.js"></script>
+<!-- Ace editor JavaScript tools, theme, languages etc document -->
 <script src="~/ace/ext-language_tools.js"></script>
 <script src="~/myjs/terminal.js"></script>
 <script src="~/myjs/header.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
 <!-- JavaScript bootstrap document -->
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+<!-- JQuery library -->
 <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 <script src="~/myjs/tabs.js"></script>
 <script src="~/Scripts/FileManagement.js"></script>
-<!-- JavaScript document that handles functions, settings functions and similiar -->
-<script src="~/no-fonflikt/doc.js"></script>
 <script src="~/Scripts/autoSave.js"></script>
 <script src="~/myjs/loadTheTerminal.js"></script>
 <script src="~/Scripts/VariableChecks.js"></script>
+<!-- JavaScript document that handles functions, settings functions and similiar -->
+<script src="~/no-fonflikt/doc.js"></script>
