--- a/WebApplication1/WebApplication1/Content/bootstrapnonscroll.css
+++ b/WebApplication1/WebApplication1/Content/bootstrapnonscroll.css
@@ -211,6 +211,16 @@ body {
     overflow-x:hidden;
     overflow-y:hidden;
 }
+#showcontent {
+    width:300px;
+    display:none;
+    float:right;
+    z-index:62;
+    position:fixed;
+    right:5px;
+    background-color:white;
+    box-shadow:1px 1px 5px;
+}
 /*
     <div id="tinybox"></div>
 */
