--- a/WebApplication1/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/Index.cshtml
@@ -93,8 +93,8 @@
             </form>
         </div>
         <div class='fileMenu'>
-            <button id="add_tab">Create New File</button>
-            <button id="DeleteFileButton">Delete File</button>
+            <button class="fileMenuButton" id="CreateFileButton">Create New File</button>
+            <button class="fileMenuButton" id="DeleteFileButton">Delete File</button>
         </div>
         <div class="col-md-3" id="hierarchy">
             <div id="editor-box">
