Made some col changes to the tabs and preview area, also alot of styling

--- a/WebApplication1/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/Index.cshtml
@@ -22,11 +22,12 @@
     <link href="~/mycss/StyleSheet1.css" rel="stylesheet" />
     <link rel="stylesheet" href="../../Content/Site.css" />
     <link rel="stylesheet" href="../../Content/style67.css" />
-    <link rel="stylesheet" href="../../Content/bootstrapnonscroll.css" />
+
+    <link href="~/Content/bootstrapnonscroll.css" rel="stylesheet" />
 </head>
 <div class="col-md-12" id="Container">
     <div class="col-md-12" id="bodyArea">
-        <div class="col-md-3" id="headerAreaFirstDiv">
+        <div class="col-md-2" id="headerAreaFirstDiv">
             <!-- open and close settings -->
             <div id="boxie"></div>
             <div id="boxieR"></div>
@@ -70,24 +71,24 @@
                 }
             </div>
         </div>
-        <div class="col-md-9" id="HeaderAreaSecondDiv">
+        <div class="col-md-10" id="HeaderAreaSecondDiv">
             <div id="tabs">
                 <ul id="sortable">
                     <li><a href="#tabs-1">Tab 1</a> <span class="ui-icon ui-icon-close" role="presentation">Remove Tab</span></li>
                 </ul>
             </div>
         </div>
-        <div class="col-md-3" id="hierarchy">
+        <div class="col-md-2" id="hierarchy">
             <div id="editor-box">
                 <div id="ram">
                     <ol id="FileManager"></ol>
                 </div>
             </div>
         </div>
-        <div class="col-md-9" id="editorArea">
+        <div class="col-md-10" id="editorArea">
             <pre id="editor"></pre>
         </div>
-        <div class="col-md-9" id="consoleArea">
+        <div class="col-md-10" id="consoleArea">
             <div id="term"></div>
         </div>
     </div>
