--- a/WebApplication1/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/Index.cshtml
@@ -31,8 +31,8 @@
             <!-- open and close settings -->
             <div id="boxie"></div>
             <div id="boxieR"></div>
-            <div id="errormess"></div>
-           
+            <div id="errormess"><span id="valid"></span></div>
+            
         
             <!-- Settings -->
             <div id="showcontent">
