--- a/WebApplication1/WebApplication1/Content/FileManagerDesign.css
+++ b/WebApplication1/WebApplication1/Content/FileManagerDesign.css
@@ -136,9 +136,24 @@ ol.FileManager
 
 }
 /*Css Alex*/
-#errormess{
-    float:left;
-    width:100px;
+#errormess {
+     /*background-image: url('../img/300px-Button_Icon_Green.svg.png');*/
+    
+    background-size: 10px 10px;
+    background-repeat:no-repeat;
+    margin-top: 10px;
+    padding-left: 30px;
+    float: left;
+    width: 50px;
+}
+#valid {
+   
+    background-size: 10px 10px;
+    background-repeat: no-repeat;
+    margin-top: 10px;
+    padding-left: 30px;
+    float: left;
+    width: 50px;
 }
 #msg{
     float:left;
