--- a/WebApplication1/WebApplication1/Content/Site.css
+++ b/WebApplication1/WebApplication1/Content/Site.css
@@ -152,7 +152,7 @@ box-shadow: 0px -5px 5px 0px rgba(0,0,0,0.75);
 	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#598f3e', endColorstr='#5bcc26',GradientType=0);
 	background-color:#598f3e;
 }
-
+#preview_button:focus {outline:0 !important;}
 #preview_button:active {
 	
 	top:1px;
@@ -196,8 +196,9 @@ box-shadow: 0px -5px 5px 0px rgba(0,0,0,0.75);
 	font-weight:bold;
 	/*padding:6px 12px;*/
 	text-decoration:none;
+    outline:0;
 }
-
+button:focus {outline:0 !important;}
 .btn:hover {
 	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #598f3e), color-stop(1, #5bcc26));
 	background:-moz-linear-gradient(top, #598f3e 5%, #5bcc26 100%);
