--- a/WebApplication1/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/Index.cshtml
@@ -13,11 +13,10 @@
     <link href="~/Content/FileManagerDesign.css" rel="stylesheet" />
     <link href="~/Content/styleIndex.css" rel="stylesheet" />
     <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
-    <!-- Here we have 2 bootstrap document, a lot of css code. Basicly a library -->
-    <link rel="stylesheet" href="../../Content/bootstrap.css" />
-    <!-- Second bootstrap document -->
+    <!-- bootstrap documents, a lot of css code. Basicly a library -->
+    <link href="~/Content/bootstrap.css" rel="stylesheet" />
     <link rel="stylesheet" href="../../Content/bootstrap.min.css" />
-    <link href="~/mycss/StyleSheet1.css" rel="stylesheet" />
+    <!-- There are a few functions in here that are used -->
     <link rel="stylesheet" href="../../Content/Site.css" />
     <!-- CSS document for settings and other different features, not all are used -->
     <link rel="stylesheet" href="../../Content/style67.css" />
@@ -27,6 +26,7 @@
 <div class="col-md-12" id="Container">
     <div class="col-md-12" id="bodyArea">
         <div class="col-md-2" id="headerAreaFirstDiv">
+            <span id="spantext">js</span>
             <!-- open and close settings -->
             <div id="boxie"></div>
             <div id="boxieR"></div>
@@ -64,6 +64,7 @@
                         <p class="spanCommandP"><span title="Cobalt is a dark blue theme" id="cb1" class="spanpointer">cobalt theme</span></p>
                         <p class="spanCommandP"><span title="Tomorrow is a white theme" id="tm1" class="spanpointer">tomorrow theme</span></p>
                     </div>
+                    <a href="https://i.gyazo.com/11423dfcf429a37268ba0b5051f0359e.png" alt="lol">dank editor 100%</a>
                 </div>
             </div>
             <!-- Save button -->
