--- a/WebApplication1/WebApplication1/Content/bootstrapnonscroll.css
+++ b/WebApplication1/WebApplication1/Content/bootstrapnonscroll.css
@@ -171,14 +171,13 @@ body {
     padding:0px;
     float:left;
     border:0px;
+    background:#303030
 }
 #sortable li {
     min-height:100%;
     max-height:100%;
     height:100%;
-    width:10%;
-    max-width:10%;
-    min-width:10%;
+    width:auto;
     margin:0px;
     padding:0px;
     float:left;
