--- a/WebApplication1/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/Index.cshtml
@@ -34,7 +34,9 @@
     <div class="col-md-12" id="bodyArea">
         <div class="col-md-2" id="headerAreaFirstDiv">
             <!-- open and close settings -->
-            
+            <div id="boxie"></div>
+            <div id="boxieR"></div>
+           
           @*  <div id="errormess"><span id="valid"></span></div>*@
             
         
