done with design on tabs, need input from team

--- a/WebApplication1/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/Index.cshtml
@@ -88,7 +88,7 @@
                 </ul>
             </div>
         </div>
-        <!-- 
+         
         <div id="dialog" title="Create New File">
             <form>
                 <fieldset class="ui-helper-reset">
@@ -107,7 +107,7 @@
                <div class='fileMenu'>
             <button id="add_tab">Create New File</button>
             <button id="DeleteFileButton">Delete File</button>
-        </div>-->
+        </div>
         <!-- Filehieracrhy -->
         <div class="col-md-2" id="hierarchy">
             <div id="editor-box">
