Added more icons to the file-hierarchy

--- a/WebApplication1/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/Index.cshtml
@@ -76,6 +76,7 @@
                 </ul>
             </div>
         </div>
+        <!--A Hidden window that will appear when the user want to create a file -->
         <div id="dialog" title="Create New File">
             <form>
                 <fieldset class="ui-helper-reset">
@@ -103,9 +104,11 @@
             </div>
         </div>
         <div class="col-md-10" id="editorArea">
+            <!-- This is where we will print out our code editor -->
             <pre id="editor"></pre>
         </div>
         <div class="col-md-10" id="consoleArea">
+            <!-- This is where we will print out our terminal -->
             <div id="term"></div>
         </div>
     </div>
