--- a/WebApplication1/WebApplication1/Content/FileManagerDesign.css
+++ b/WebApplication1/WebApplication1/Content/FileManagerDesign.css
@@ -48,9 +48,9 @@ ol.FileManager
 			display: block;
             font-family:Consolas;
 		}
-		li.file a[href *= 'pdf']	{ background: url(Icons/document.png) 0 0 no-repeat; }
-		li.file a[href *= 'html']	{ background: url(Icons/document.png) 0 0 no-repeat; }
-		li.file a[href $= 'css']	{ background: url(Icons/document.png) 0 0 no-repeat; }
+		li.file a[href *= 'csharp']	{ background: url(Icons/csharp.png) 0 0 no-repeat; }
+		li.file a[href *= 'html']	{ background: url(Icons/html.png) 0 0 no-repeat; }
+		li.file a[href $= 'css']	{ background: url(Icons/css.png) 0 0 no-repeat; }
 		li.file a[href $= 'javascript']		{ background: url(Icons/JSIcon16X16.png) 0 0 no-repeat; }
 	li input
 	{
