--- a/WebApplication1/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/Index.cshtml
@@ -22,82 +22,90 @@
     <!-- bootstrap documents, a lot of css code. Basicly a library -->
     <link href="~/Content/bootstrap.css" rel="stylesheet" />
     <link rel="stylesheet" href="../../Content/bootstrap.min.css" />
+    
     <!-- There are a few functions in here that are used -->
-    <link rel="stylesheet" href="../../Content/Site.css" />
+    
     <!-- CSS document for settings and other different features, not all are used -->
     <link rel="stylesheet" href="../../Content/style67.css" />
     <!-- CSS document for the layout of the site, the main structure to things -->
     <link rel="stylesheet" href="../../Content/bootstrapnonscroll.css" />
+    <link rel="stylesheet" href="../../Content/Site.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+
 </head>
 <div class="col-md-12" id="Container">
     <div class="col-md-12" id="bodyArea">
         <div class="col-md-2" id="headerAreaFirstDiv">
+          
             @*<span id="spantext">js</span>*@
             <!-- open and close settings -->
-            <div id="boxie"></div>
+            <div id="boxie">
+                <i class="fa fa-cog fa-2x" aria-hidden="false"></i>
+            </div>
+       
             <div id="boxieR"></div>
            
-          @*  <div id="errormess"><span id="valid"></span></div>*@
-            
-        
-            <!-- Settings -->
-            <div id="showcontent">
-                <h2 id="CommandHeader">Settings</h2>
-                <div class="myboxopenarea">
-                    <div class="anitfloat">
-                        <div class="clickmetoopen" id="firstopen"></div>
-                        <p class="textOpener">Editor fullscreen</p>
-                    </div>
-                    <div class="anitfloat" id="testfloat">
-                        <p class="spanCommandP"><span title="Full screen coding" id="full1" class="spanpointer">Fullscreen</span></p>
-                        <p class="spanCommandP"><span title="Revert full screen into normal size" id="rev1" class="spanpointer">Window Mode</span></p>
-                    </div>
-                    <div class="anitfloat">
-                        <div class="clickmetoopenLang" id="thirdopen"></div>
-                        <p class="textOpener">Editor coding languages</p>
-                    </div>
-                    <div class="anitfloat" id="imtestfloating">
-                        <p class="spanCommandP"><span title="Web" id="html1" class="spanpointer">HTML</span></p>
-                        <p class="spanCommandP"><span title="Styling" id="css1" class="spanpointer">CSS</span></p>
-                        <p class="spanCommandP"><span title="Functions" id="js1" class="spanpointer">JavaScript</span></p>
-                        <p class="spanCommandP"><span title="Object oriented" id="cs1" class="spanpointer">C#</span></p>
-                        <p class="spanCommandP"><span title="Functions/web" id="phps" class="spanpointer">PHP</span></p>
-                        <p class="spanCommandP"><span title="Database" id="sqls" class="spanpointer">SQL</span></p>
-                    </div>
-                    <div class="anitfloat">
-                        <div class="clickmetoopenThemes" id="secondopen"></div>
-                        <p class="textOpener">Editor themes</p>
-                    </div>
-                    <div class="anitfloat" id="testfloatThemes">
-                        <p class="spanCommandP"><span title="Monokai is a dark theme" id="mn1" class="spanpointer">monokai theme</span></p>
-                        <p class="spanCommandP"><span title="Iplastic is a bright gray theme" id="isp1" class="spanpointer">iplastic theme</span></p>
-                        <p class="spanCommandP"><span title="Cobalt is a dark blue theme" id="cb1" class="spanpointer">cobalt theme</span></p>
-                        <p class="spanCommandP"><span title="Tomorrow is a white theme" id="tm1" class="spanpointer">tomorrow theme</span></p>
+                @*  <div id="errormess"><span id="valid"></span></div>*@
+
+
+                <!-- Settings -->
+                <div id="showcontent">
+                    <h2 id="CommandHeader">Settings</h2>
+                    <div class="myboxopenarea">
+                        <div class="anitfloat">
+                            <div class="clickmetoopen" id="firstopen"></div>
+                            <p class="textOpener">Editor fullscreen</p>
+                        </div>
+                        <div class="anitfloat" id="testfloat">
+                            <p class="spanCommandP"><span title="Full screen coding" id="full1" class="spanpointer">Fullscreen</span></p>
+                            <p class="spanCommandP"><span title="Revert full screen into normal size" id="rev1" class="spanpointer">Window Mode</span></p>
+                        </div>
+                        <div class="anitfloat">
+                            <div class="clickmetoopenLang" id="thirdopen"></div>
+                            <p class="textOpener">Editor coding languages</p>
+                        </div>
+                        <div class="anitfloat" id="imtestfloating">
+                            <p class="spanCommandP"><span title="Web" id="html1" class="spanpointer">HTML</span></p>
+                            <p class="spanCommandP"><span title="Styling" id="css1" class="spanpointer">CSS</span></p>
+                            <p class="spanCommandP"><span title="Functions" id="js1" class="spanpointer">JavaScript</span></p>
+                            <p class="spanCommandP"><span title="Object oriented" id="cs1" class="spanpointer">C#</span></p>
+                            <p class="spanCommandP"><span title="Functions/web" id="phps" class="spanpointer">PHP</span></p>
+                            <p class="spanCommandP"><span title="Database" id="sqls" class="spanpointer">SQL</span></p>
+                        </div>
+                        <div class="anitfloat">
+                            <div class="clickmetoopenThemes" id="secondopen"></div>
+                            <p class="textOpener">Editor themes</p>
+                        </div>
+                        <div class="anitfloat" id="testfloatThemes">
+                            <p class="spanCommandP"><span title="Monokai is a dark theme" id="mn1" class="spanpointer">monokai theme</span></p>
+                            <p class="spanCommandP"><span title="Iplastic is a bright gray theme" id="isp1" class="spanpointer">iplastic theme</span></p>
+                            <p class="spanCommandP"><span title="Cobalt is a dark blue theme" id="cb1" class="spanpointer">cobalt theme</span></p>
+                            <p class="spanCommandP"><span title="Tomorrow is a white theme" id="tm1" class="spanpointer">tomorrow theme</span></p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <!-- Save button -->
-            <button type="button" class="btn">
-                <span class="glyphicon glyphicon-floppy-saved"></span>Save
-            </button>
-            <!-- Preview button -->
-            <div id="form_button">
-                @using (Html.BeginForm("Action", "Controller", FormMethod.Get, new { target = "_blank" }))
-                {
-                    <input type="submit" value="Run preview" id="preview_button" />
-                    <input style="display:none" type="text" id="testData" name="reportName" />
+                <!-- Save button -->
+                <button type="button" class="btn">
+                    Save
+                </button>
+                <!-- Preview button -->
+                <div id="form_button">
+                    @using (Html.BeginForm("Action", "Controller", FormMethod.Get, new { target = "_blank" }))
+                    {
+                        <input type="submit" value="Run preview" id="preview_button" />
+                        <input style="display:none" type="text" id="testData" name="reportName" />
 
 
-                @*@using (Html.BeginForm())
-                {
-                    // <input type="text" id="testData" />
-                    <input type="submit" value="Run preview" id="preview_button" />
-                    <input style="display:none" type="text" id="testData" name="reportName" />
-                    
-                }*@
-                }
-            </div>
-        </div>
+                        @*@using (Html.BeginForm())
+                    {
+                        // <input type="text" id="testData" />
+                        <input type="submit" value="Run preview" id="preview_button" />
+                        <input style="display:none" type="text" id="testData" name="reportName" />
+
+                    }*@
+                    }
+                </div>
+</div>
         <!-- Area for tabs -->
         <div class="col-md-10" id="HeaderAreaSecondDiv">
             <div id="tabs">
