--- a/WebApplication1/WebApplication1/Content/FileManagerDesign.css
+++ b/WebApplication1/WebApplication1/Content/FileManagerDesign.css
@@ -46,7 +46,8 @@ ol.FileManager
 			padding-left: 21px;
 			text-decoration: none;
 			display: block;
-            font-family:Consolas;
+            font-family: Tahoma;
+            font-size:15px;
 		}
 		li.file a[href *= 'csharp']	{ background: url(Icons/csharp.png) 0 0 no-repeat; }
 		li.file a[href *= 'html']	{ background: url(Icons/html.png) 0 0 no-repeat; }
@@ -75,7 +76,8 @@ ol.FileManager
 		li input + ol > li { display: none; margin-left: -14px !important; padding-left: 1px; }
 	li label
 	{
-         font-family:Consolas;
+           font-family: Tahoma;
+            font-size:15px;
         background-position: left center;
 		background: url(Icons/folder-horizontal.png) 15px 1px no-repeat;
 		cursor: pointer;
