--- a/WebApplication1/WebApplication1/Content/Site.css
+++ b/WebApplication1/WebApplication1/Content/Site.css
@@ -43,9 +43,7 @@ box-shadow: 0px -5px 5px 0px rgba(0,0,0,0.75);
     /*#sortable {
         
         list-style-type: none;
-    
-        /*box-shadow: inset 0 0 1em black, 0 0 1em black;*/
-        border-right-color:silver;
+            border-right-color:silver;
         border-top-color:silver;
         border-bottom-color:silver;
   
@@ -188,7 +186,7 @@ box-shadow: 0px -5px 5px 0px rgba(0,0,0,0.75);
 	background:linear-gradient(to bottom, #5bcc26 5%, #598f3e 100%);
 	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#5bcc26', endColorstr='#598f3e',GradientType=0);
 	background-color:#5bcc26;
-	border:1px solid #3b6e22;
+    margin-top:4px;
 	margin-right:60px;
 	cursor:pointer;
 	color:#ffffff;
@@ -198,6 +196,8 @@ box-shadow: 0px -5px 5px 0px rgba(0,0,0,0.75);
 	/*padding:6px 12px;*/
 	text-decoration:none;
     outline:0;
+    height:30px;
+    border-radius:0;
 }
 button:focus {outline:0 !important;}
 .btn:hover {
