--- a/WebApplication1/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/Index.cshtml
@@ -43,7 +43,7 @@
                 <i class="fa fa-cog fa-2x" aria-hidden="false"></i>
             </div>
        
-            <div id="boxieR"></div>
+            <div id="boxieR"><i class="fa fa-cog fa-2x" aria-hidden="false"></i></div>
            
                 @*  <div id="errormess"><span id="valid"></span></div>*@
 
