--- a/WebApplication1/WebApplication1/Content/Site.css
+++ b/WebApplication1/WebApplication1/Content/Site.css
@@ -165,10 +165,11 @@ box-shadow: 0px -5px 5px 0px rgba(0,0,0,0.75);
 #form_button{
     width:30px;
   
-    float:right;
+    float:left;
   position: relative;
   right:60px;
   margin-top:4px;
+  margin-left:50px;
 }
 
 
@@ -187,7 +188,7 @@ box-shadow: 0px -5px 5px 0px rgba(0,0,0,0.75);
 	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#5bcc26', endColorstr='#598f3e',GradientType=0);
 	background-color:#5bcc26;
     margin-top:4px;
-	margin-right:60px;
+	margin-left:6px;
 	cursor:pointer;
 	color:#ffffff;
 	font-family:Arial;
