--- a/WebApplication1/WebApplication1/Content/style67.css
+++ b/WebApplication1/WebApplication1/Content/style67.css
@@ -258,11 +258,11 @@ p {
 }
 #boxie {
 
-           font-family: FontAwesome;
+    font-family: FontAwesome;
     background-size:cover;
     background-repeat:no-repeat;
     width:30px;
-    height:30px;
+    height:20px;
     float:right;
     cursor:pointer;
     padding-right:0;
@@ -281,8 +281,20 @@ p {
     /*margin-right:25px;*/
 }
 .fa-cog{
+    float:left;
     color:silver;
-    margin-right:0;
+    padding-left:10px;
+   
+}
+.saveIcon {
+    width:10px;
+    height:10px;
+    float: right;
+    background-image: url('../img/300px-Button_Icon_Green.svg.png');
+    background-size:10px 10px;
+    background-repeat:no-repeat;
+    margin-top:5%;
+   
 }
 #showcontent {
     width:300px;
